--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #24352a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,14 +20,24 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #0cd660;
 }
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale(.1);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(360deg) scale(1.3);
   }
+}
+
+
+.im {
+  transition: 1s all;
+
+}
+
+im:hover {
+  transform: scale(1.4);
 }
